@@ -1,7 +1,10 @@
 2002-12-30    <smulloni@smullbola.smullyan.org>
 
-	* pylibs/formlib/dispatcher.py (FormDispatcher.dispatch): permit start form
-	to be null.
+	* pylibs/formlib/views.py (SubmitButtonGroupField): support for
+	groups of submit fields.
+
+	* pylibs/formlib/dispatcher.py (FormDispatcher.dispatch): permit
+	start form to be null.
 
 2002-12-30  Jacob Smullyan  <smulloni@smullyan.org>
 
